--- a/Frontend/src/styles/pagesStyle/contact.css
+++ b/Frontend/src/styles/pagesStyle/contact.css
@@ -6,7 +6,9 @@
     color: #1A2E49;
     margin-top: 40px;
   }
-  
+  #ccc{
+    color: #000;
+  }
   h2 {
     margin-bottom: 20px;
     font-size: 36px;
