--- a/Frontend/src/styles/pagesStyle/help.css
+++ b/Frontend/src/styles/pagesStyle/help.css
@@ -5,6 +5,11 @@
     margin-top: 40px;
     font-family: Arial, sans-serif;
   }
+  .text{
+ 
+    color: #333;
+    
+  }
   
   .help-heading {
     font-size: 36px;
