--- a/AdminFrontend/src/styles/adminHeader.css
+++ b/AdminFrontend/src/styles/adminHeader.css
@@ -1,4 +1,4 @@
-/* adminHeader.css */
+
 
 .admin-header {
     position: fixed;
@@ -20,7 +20,6 @@
     font-size: 1.5rem;
     font-weight: bold;
     display: flex;
-    align-items: center;
     gap:20px;
   }
   
@@ -35,6 +34,7 @@
   
   .admin-header .nav-links {
     display: flex;
+    margin-left: 800px;
     gap: 2rem;
     font-weight: bold;
   }
@@ -51,6 +51,7 @@
     font-size: 1.2rem;
     transition: color 0.3s ease;
     margin-right: 10px;
+  
   }
   
   .admin-header .nav-links a:hover {
@@ -61,6 +62,12 @@
   }
   
   body {
-    margin-top: 80px; /* To prevent content from being hidden under the fixed header */
+    margin-top: 80px; 
+  }
+
+  @media (max-width: 768px) {
+    .admin-header .nav-links{
+      margin-left: 100px;
+    }
   }
   
