--- a/AdminFrontend/src/styles/adminStyles.css
+++ b/AdminFrontend/src/styles/adminStyles.css
@@ -46,4 +46,9 @@ padding: 50px 20px 70px;
   .card:hover {
     box-shadow: 0 6px 10px rgba(0, 0, 0, 0.15);
   }
+  @media (max-width: 768px) {
+    .page-content{
+      margin-left: 100px;
+    }
+  }
   
