--- a/Frontend/src/styles/pagesStyle/login.css
+++ b/Frontend/src/styles/pagesStyle/login.css
@@ -35,10 +35,7 @@ body {
     justify-content: center;
     align-items: flex-start;
   }
-  input:focus+label{
-    transform: translateY(-25px);
-    color: #0056b3;
-  }
+
   .login-form h2 {
     font-size: 24px;
     color: #333333;
@@ -110,30 +107,69 @@ body {
     color: #555555;
     line-height: 1.6;
   }
+  @media (max-width: 768px) {
+    .login-container {
+      flex-direction: column;
+      height: 90vh;
+      margin-top: 30px;
+      width: 500px;
+    }
+  
+    .login-form,
+    .description {
+      padding: 10px;
+    }
+  
+    .login-form h2 {
+      font-size: 20px;
+    }
+  
+    .form-group label {
+      font-size: 12px;
+    }
+  
+    .form-group input {
+      font-size: 14px;
+    }
+  
+    .login-btn {
+      font-size: 14px;
+      padding: 10px;
+    }
+  
+    .vertical-line {
+      display: none;
+    }
+  
+    .description h2 {
+      font-size: 18px;
+    }
+  
+    .description p {
+      font-size: 14px;
+      font-weight: bold;
+    }
+  }
+  
   @media (max-width: 480px) {
     .login-page {
-      display: flex;
-      flex-direction: column;
-      padding: 10px;
+      padding: 0 10px;
     }
   
-    .login-container {
-      width: 100%;
-      padding: 10px;
-    }
-  
-    .login-form {
-      width: 100%;
-    }
-  
-    .description {
-      width: 100%;
-      margin-top: 15px;
-      font-size: 12px;
+    .login-form h2 {
+      font-size: 18px;
     }
   
     .login-btn {
       font-size: 14px;
       padding: 8px;
+    }
+  
+    .description h2 {
+      font-size: 16px;
+    }
+  
+    .description p {
+      font-size: 20px;
     }
   }
