--- a/Frontend/src/styles/pagesStyle/quizPage.css
+++ b/Frontend/src/styles/pagesStyle/quizPage.css
@@ -47,6 +47,7 @@ button:hover {
   height: 100px;
   text-align: center;
   cursor: pointer;
+  margin: 0px 40px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
@@ -77,7 +78,7 @@ button:hover {
 
 .question-card p {
   font-size: 1rem;
-  color: #333;
+  color: #2575fc;
 }
 
 /* Logout Button */
@@ -141,6 +142,7 @@ button:hover {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  margin-left: 10px;
 }
 
 .passcode-modal button:hover {
