--- a/Frontend/src/styles/pagesStyle/quizCard.css
+++ b/Frontend/src/styles/pagesStyle/quizCard.css
@@ -1,12 +1,12 @@
 /* General styles */
 body {
     font-family: 'Roboto', Arial, sans-serif;
-    margin: 0;
+    margin-top: 80px;
     padding: 0;
-    /* display: flex; */
+    
     justify-content: center;
     align-items: center;
-    /* min-height: 100vh; */
+
     background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
     color: #333;
   }
