--- a/Frontend/src/styles/pagesStyle/About.css
+++ b/Frontend/src/styles/pagesStyle/About.css
@@ -30,7 +30,7 @@ body {
 .about-heading {
   font-size: 2.5rem;
   font-weight: 600;
-  color: #4caf50;
+  color: rgb(56, 56, 232);
   text-align: center;
   margin-bottom: 20px;
 }
@@ -47,7 +47,7 @@ body {
   font-size: 1.5rem;
   font-weight: 500;
   margin-bottom: 10px;
-  color: #4caf50;
+  color: rgb(56, 56, 232);
 }
 
 .features-list {
