--- a/Frontend/src/styles/pagesStyle/contact.css
+++ b/Frontend/src/styles/pagesStyle/contact.css
@@ -25,6 +25,7 @@
     display: flex;
     flex-direction: column;
     position: relative;
+
   }
   
   label {
@@ -32,12 +33,13 @@
     margin-bottom: 5px;
     color: #1A2E49;
   }
+
   
   input[type="text"],
   input[type="email"],
   textarea {
     border: none;
-    border-bottom: 2px solid rgb(56, 56, 232) ;
+    border-bottom: 2px solid #dab4b0 !important;
     padding: 10px 5px;
     font-size: 1rem;
     background-color: transparent;
